--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   hive: ^2.2.3
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  path: ^1.8.3
+  path_provider: ^2.1.5
   uuid: ^3.0.7
   
 dev_dependencies:
