--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  get_it: ^8.0.2
+  get_it: ^8.0.3
   hive: ^2.2.3
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  mockito: ^5.4.4
   path: ^1.8.3
   path_provider: ^2.1.5
   uuid: ^3.0.7
