--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,12 @@ dependencies:
   mockito: ^5.4.4
   path: ^1.8.3
   path_provider: ^2.1.5
+  shared_preferences: ^2.3.5
   uuid: ^3.0.7
   
-dev_dependencies:
+dev_dependencies:   
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.13
